# mgs2-asi-config-editor

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: feature.yml  release.yml
src/: App.vue  fontawesome.ts  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.editordata/: MGS2.Actions.ini  MGS2.Affinity.ini  MGS2.Ames.ini  MGS2.Caution.ini  MGS2.CutsceneSkip.ini  MGS2.Dark.ini  MGS2.DelayedLoad.ini  MGS2.DrebinMode.ini  MGS2.EquipShortcuts.ini  MGS2.FirstPerson.ini  MGS2.GameOver.ini  MGS2.Info.ini  MGS2.ItemRando.ini  MGS2.NewGameInfo.ini  MGS2.Options.ini  MGS2.PS2Controls.ini  MGS2.Performance.ini  MGS2.SaveLocation.ini  MGS2.SaveMenu.ini  MGS2.SoftReset.ini  MGS2.Stats.ini  MGS2.Style.ini  MGS2.TextChange.ini  MGS2.Timer.ini  MGS2.Turbo.ini  MGS2.TurboDisplay.ini  MGS2.TwinSnakesInput.ini  MGS2.UnlockRadar.ini  MGS2.VRInfo.ini  MGS2.VRRando.ini  MGS2.Wet.ini  MGS2.ini
src-tauri/icons/: icon.icns
src-tauri/src/: inihandler.rs  main.rs
src/components/: IniFileViewer.vue  Sidebar.vue
src/composables/: editIniFile.ts  loadIniFile.ts  messageDialog.ts
src/pages/: Help.vue  Home.vue
